<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/text_question01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_question01"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_first_day"
        android:id="@+id/id_btn_first_day"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/id_question01"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_second_day"
        android:id="@+id/id_btn_second_day"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/id_btn_first_day"
        android:layout_alignLeft="@+id/id_btn_first_day"
        android:layout_alignStart="@+id/id_btn_first_day"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish"
        android:id="@+id/id_btn_finish"
        android:layout_below="@+id/id_btn_second_day"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

</RelativeLayout>
